--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -57,7 +57,7 @@ jobs:
           fi
 
           for IP in $INSTANCE_IPS; do
-            ssh -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP <<- ENDSSH
+            ssh -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP << ENDSSH
               set -e
               aws ecr get-login-password --region ${AWS_REGION} | \
               sudo docker login --username AWS --password-stdin 533266957010.dkr.ecr.${AWS_REGION}.amazonaws.com
@@ -70,7 +70,7 @@ jobs:
               --restart unless-stopped \
               -p 3000:80 \
               ${ECR_IMAGE}
-                      
+                        
               sleep 3
               curl -f http://localhost:3000/health || echo "Health check warning"
             ENDSSH
