--- a/.github/workflows/force-update-ec2.yml
+++ b/.github/workflows/force-update-ec2.yml
@@ -38,7 +38,12 @@ jobs:
         run: |
           echo "Checking SSH key file..."
           ls -l $HOME/.ssh
-          cat $HOME/.ssh/vockey.pem
+          echo "First line of key:"
+          head -n 1 $HOME/.ssh/vockey.pem
+          echo "Last line of key:"
+          tail -n 1 $HOME/.ssh/vockey.pem
+          echo "Key file size:"
+          wc -c $HOME/.ssh/vockey.pem
 
       - name: Force Update EC2 Instances
         env:
@@ -60,7 +65,7 @@ jobs:
           fi
           
           for IP in $INSTANCE_IPS; do
-              sudo ssh -vvv -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP << ENDSSH
+              ssh -vvv -i "$SSH_KEY" -o StrictHostKeyChecking=no ec2-user@$IP << 'ENDSSH'
                   set -e
                   aws ecr get-login-password --region ${AWS_REGION} | sudo docker login --username AWS --password-stdin 533266957010.dkr.ecr.${AWS_REGION}.amazonaws.com
                   sudo docker stop brewcraft-app 2>/dev/null || true
