--- a/cloudformation/parameters.yaml
+++ b/cloudformation/parameters.yaml
@@ -1,6 +1,6 @@
 EnvironmentName: dev
 DomainName: brewcraft.rocks
-HostedZoneId: Z05960073426N6KBSQBUN
+HostedZoneId: Z03331422OT9FUTMTCAKJ
 KeyPairName: vockey
 InstanceType: t2.micro
 MinSize: 2
